--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,11 +17,14 @@
     "@mui/material": "^5.15.13",
     "@mui/styled-engine-sc": "^6.0.0-alpha.17",
     "@mui/x-charts": "^6.19.5",
+    "@react-pdf/renderer": "^3.4.2",
+    "pdfmake": "^0.2.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "styled-components": "^6.1.8",
-    "sweetalert2": "^11.10.7"
+    "sweetalert2": "^11.10.7",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
@@ -31,6 +34,7 @@
     "eslint-plugin-react": "^7.34.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "fontkit": "^2.0.2",
     "vite": "^5.1.6"
   }
 }
