--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.1",
     "nodemailer": "^6.9.13",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "nodemon": "^3.1.0"
   },
   "devDependencies": {
