--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.17",
     "@mui/x-charts": "^6.19.5",
     "@react-pdf/renderer": "^3.4.2",
+    "dotenv": "^16.4.5",
     "firebase": "^10.12.1",
     "pdfmake": "^0.2.10",
     "react": "^18.2.0",
