--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-pdf/renderer": "^3.4.2",
     "dotenv": "^16.4.5",
     "firebase": "^10.12.1",
+    "gh-pages": "^6.1.1",
     "pdfmake": "^0.2.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
